--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^4.0.0",
     "@tailwindcss/forms": "^0.5.2",
     "@trpc/client": "^9.25.3",
@@ -20,6 +21,7 @@
     "cookie": "^0.5.0",
     "jsonwebtoken": "^8.5.1",
     "next": "12.2.0",
+    "next-auth": "^4.10.0",
     "nodemailer": "^6.7.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
