--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "woo10000see",
+  "name": "knock-knock",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,13 +12,13 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^4.0.0",
-    "@tailwindcss/forms": "^0.5.2",
     "@trpc/client": "^9.25.3",
     "@trpc/next": "^9.25.3",
     "@trpc/react": "^9.25.3",
     "@trpc/server": "^9.25.3",
     "@types/cookie": "^0.5.1",
     "cookie": "^0.5.0",
+    "daisyui": "^1.25.4",
     "jsonwebtoken": "^8.5.1",
     "next": "12.2.0",
     "next-auth": "^4.10.0",
@@ -31,6 +31,7 @@
     "zod": "^3.17.3"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.4",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "18.0.0",
     "@types/nodemailer": "^6.4.4",
@@ -38,11 +39,11 @@
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "^0.2.4",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prisma": "^4.0.0",
-    "tailwindcss": "^3.1.5",
+    "tailwindcss": "^3.1.6",
     "typescript": "4.7.4"
   }
 }
