--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-auth": "^4.10.0",
     "nodemailer": "^6.7.7",
     "react": "18.2.0",
+    "react-calendar": "^3.7.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.1",
     "react-query": "^3.39.1",
@@ -37,6 +38,7 @@
     "@types/node": "18.0.0",
     "@types/nodemailer": "^6.4.4",
     "@types/react": "18.0.14",
+    "@types/react-calendar": "^3.5.1",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
