--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.1",
     "react-query": "^3.39.1",
+    "react-toastify": "^9.0.7",
     "react-use": "^17.4.0",
     "superjson": "^1.9.1",
     "zod": "^3.17.3"
