--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8080",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -24,7 +24,7 @@
     "next": "12.2.0",
     "next-auth": "^4.10.0",
     "next-compose-plugins": "^2.2.1",
-    "next-pwa": "^5.5.5",
+    "next-pwa": "^5.5.4",
     "nodemailer": "^6.7.7",
     "react": "18.2.0",
     "react-calendar": "^3.7.0",
