--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-query": "^3.39.1",
     "react-toastify": "^9.0.7",
     "react-use": "^17.4.0",
+    "recoil": "^0.7.5",
     "superjson": "^1.9.1",
     "zod": "^3.17.3"
   },
